--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backend",
+  "name": "teja_node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm install && netlify dev -p 8080"
+    "dev": "npm install && netlify dev"
   },
   "keywords": [],
   "author": "",
