--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@
     from = "/api"
     to = "/.netlify/functions/api"
     status = 200
+[dev]
+    functions = "netlify/functions"
+    publish = "public"
+    port = 1326
+    autoLaunch = true
