--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
     from = "/api"
     to = "/.netlify/functions/api"
     status = 200
+    force = true
+  headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Content-Type, Accept" }
 [dev]
     functions = "netlify/functions"
     publish = "public"
